--- a/BlogStore.PresentationLayer/Views/Article/ArticleDetail.cshtml
+++ b/BlogStore.PresentationLayer/Views/Article/ArticleDetail.cshtml
@@ -19,14 +19,14 @@
 
                 <div class="col-md-12 col-lg-8 main-content">
 
-                    @await Component.InvokeAsync("_ArticleDetailContentComponentPartial")
+                    @await Component.InvokeAsync("_ArticleDetailContentComponentPartial", new {id = ViewBag.i})
 
 
                     <div class="pt-5">
                         <p>Categories:  <a href="#">Food</a>, <a href="#">Travel</a>  Tags: <a href="#">#manila</a>, <a href="#">#asia</a></p>
                     </div>
 
-                    @await Component.InvokeAsync("_ArticleDetailCommentListComponentPartial")
+                    @await Component.InvokeAsync("_ArticleDetailCommentListComponentPartial", new { id = ViewBag.i })
                     
 
                 </div>
