--- a/BlogStore.PresentationLayer/Views/Shared/Components/_ArticleDetailPopularPostsComponentPartial/Default.cshtml
+++ b/BlogStore.PresentationLayer/Views/Shared/Components/_ArticleDetailPopularPostsComponentPartial/Default.cshtml
@@ -1,18 +1,23 @@
-﻿<div class="sidebar-box">
+﻿@model List<BlogStore.EntityLayer.Entities.Article>
+
+<div class="sidebar-box">
     <h3 class="heading">Popüler Makaleler</h3>
     <div class="post-entry-sidebar">
         <ul>
-            <li>
-                <a href="">
-                    <img src="/blogy-1.0.0/images/img_1_sq.jpg" alt="Image placeholder" class="me-4 rounded">
+            @foreach (var item in Model)
+            {
+                <li>
+                    <a href="/Article/ArticleDetail/@item.ArticleId">
+                    <img src="@item.ImageUrl" alt="Image placeholder" class="me-4 rounded">
                     <div class="text">
-                        <h4>There’s a Cool New Way for Men to Wear Socks and Sandals</h4>
+                        <h4>@item.Title</h4>
                         <div class="post-meta">
-                            <span class="mr-2">March 15, 2018 </span>
+                            <span class="mr-2">@item.CreatedDate.ToString("dd-MMMM-yyyy")</span>
                         </div>
                     </div>
                 </a>
             </li>
+            }
         </ul>
     </div>
 </div>
